# nplagridb

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
src/nplagridb/: __init__.py  dataset.py  plotting.py  validation.py
src/nplagridb/data/metadata/: columns.csv
src/nplagridb/data/raw/crops/: sample_crops.csv
src/nplagridb/data/raw/livestock/: sample_livestock.csv
tests/: test_dataset.py
