[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nplagridb"
version = "0.1.0"
description = "Utilities for loading, validating, summarizing, and plotting multi-year Nepal agriculture and livestock CSV datasets."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Dataset Maintainers" }
]
keywords = ["nepal", "agriculture", "livestock", "dataset", "csv"]
dependencies = [
  "pandas>=1.5",
  "matplotlib>=3.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "build>=1.0",
  "twine>=4.0"
]

[project.urls]
Homepage = "https://github.com/your-username/nplagridb"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nplagridb = [
  "data/raw/crops/*.csv",
  "data/raw/livestock/*.csv",
  "data/metadata/*.csv"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
